PL-TP2-2021/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Programa
Rule 1     Programa -> Declaracoes Operacoes
Rule 2     Declaracoes -> Declaracao Declaracoes
Rule 3     Declaracoes -> <empty>
Rule 4     Declaracao -> INT DeclaracaoInt ;
Rule 5     Declaracao -> INT DeclaracaoInt
Rule 6     DeclaracaoInt -> ID = Exp
Rule 7     DeclaracaoInt -> ID
Rule 8     DeclaracaoInt -> ID = READ ( )
Rule 9     DeclaracaoInt -> ID [ NUMBER ]
Rule 10    DeclaracaoInt -> ID [ NUMBER ] = Lista
Rule 11    DeclaracaoInt -> ID [ NUMBER ] [ NUMBER ]
Rule 12    Lista -> { NUMBER RLista }
Rule 13    RLista -> , NUMBER RLista
Rule 14    RLista -> <empty>
Rule 15    Operacoes -> Operacao Operacoes
Rule 16    Operacoes -> <empty>
Rule 17    Operacao -> Atribuicao
Rule 18    Operacao -> Ciclo
Rule 19    Operacao -> Condicional
Rule 20    Operacao -> Output
Rule 21    Atribuicao -> AtribuicaoInt ;
Rule 22    Atribuicao -> AtribuicaoInt
Rule 23    AtribuicaoInt -> ID = Exp
Rule 24    AtribuicaoInt -> READ ( ID )
Rule 25    AtribuicaoInt -> ID [ Exp ] = Exp
Rule 26    AtribuicaoInt -> READ ( ID [ Exp ] )
Rule 27    AtribuicaoInt -> ID [ Exp ] [ Exp ] = Exp
Rule 28    AtribuicaoInt -> READ ( ID [ Exp ] [ Exp ] )
Rule 29    Ciclo -> WHILE ( Comparacao ) { Operacoes }
Rule 30    Condicional -> IF ( Comparacao ) { Operacoes }
Rule 31    Condicional -> IF ( Comparacao ) { Operacoes } ELSE { Operacoes }
Rule 32    Comparacao -> Exp Comparador Exp
Rule 33    Comparador -> COMP
Rule 34    Comparador -> <
Rule 35    Comparador -> >
Rule 36    Comparador -> MENORIGUAL
Rule 37    Comparador -> MAIORIGUAL
Rule 38    Comparador -> DIF
Rule 39    Output -> PRINT ( Exp ) ;
Rule 40    Output -> PRINT ( STRING ) ;
Rule 41    Output -> PRINTLN ( Exp ) ;
Rule 42    Output -> PRINTLN ( STRING ) ;
Rule 43    Exp -> Exp + Termo
Rule 44    Exp -> Exp - Termo
Rule 45    Exp -> Termo
Rule 46    Termo -> Termo * Fator
Rule 47    Termo -> Termo / Fator
Rule 48    Termo -> Termo % Fator
Rule 49    Termo -> Fator
Rule 50    Fator -> ID
Rule 51    Fator -> ID [ Exp ]
Rule 52    Fator -> ID [ Exp ] [ Exp ]
Rule 53    Fator -> NUMBER
Rule 54    Fator -> ( Exp )

Terminals, with rules where they appear

%                    : 48
(                    : 8 24 26 28 29 30 31 39 40 41 42 54
)                    : 8 24 26 28 29 30 31 39 40 41 42 54
*                    : 46
+                    : 43
,                    : 13
-                    : 44
/                    : 47
;                    : 4 21 39 40 41 42
<                    : 34
=                    : 6 8 10 23 25 27
>                    : 35
COMP                 : 33
DIF                  : 38
ELSE                 : 31
ID                   : 6 7 8 9 10 11 23 24 25 26 27 28 50 51 52
IF                   : 30 31
INT                  : 4 5
MAIORIGUAL           : 37
MENORIGUAL           : 36
NUMBER               : 9 10 11 11 12 13 53
PRINT                : 39 40
PRINTLN              : 41 42
READ                 : 8 24 26 28
STRING               : 40 42
WHILE                : 29
[                    : 9 10 11 11 25 26 27 27 28 28 51 52 52
]                    : 9 10 11 11 25 26 27 27 28 28 51 52 52
error                : 
{                    : 12 29 30 31 31
}                    : 12 29 30 31 31

Nonterminals, with rules where they appear

Atribuicao           : 17
AtribuicaoInt        : 21 22
Ciclo                : 18
Comparacao           : 29 30 31
Comparador           : 32
Condicional          : 19
Declaracao           : 2
DeclaracaoInt        : 4 5
Declaracoes          : 1 2
Exp                  : 6 23 25 25 26 27 27 27 28 28 32 32 39 41 43 44 51 52 52 54
Fator                : 46 47 48 49
Lista                : 10
Operacao             : 15
Operacoes            : 1 15 29 30 31 31
Output               : 20
Programa             : 0
RLista               : 12 13
Termo                : 43 44 45 46 47 48

Parsing method: LALR

state 0

    (0) S' -> . Programa
    (1) Programa -> . Declaracoes Operacoes
    (2) Declaracoes -> . Declaracao Declaracoes
    (3) Declaracoes -> .
    (4) Declaracao -> . INT DeclaracaoInt ;
    (5) Declaracao -> . INT DeclaracaoInt

    WHILE           reduce using rule 3 (Declaracoes -> .)
    IF              reduce using rule 3 (Declaracoes -> .)
    PRINT           reduce using rule 3 (Declaracoes -> .)
    PRINTLN         reduce using rule 3 (Declaracoes -> .)
    ID              reduce using rule 3 (Declaracoes -> .)
    READ            reduce using rule 3 (Declaracoes -> .)
    $end            reduce using rule 3 (Declaracoes -> .)
    INT             shift and go to state 4

    Programa                       shift and go to state 1
    Declaracoes                    shift and go to state 2
    Declaracao                     shift and go to state 3

state 1

    (0) S' -> Programa .



state 2

    (1) Programa -> Declaracoes . Operacoes
    (15) Operacoes -> . Operacao Operacoes
    (16) Operacoes -> .
    (17) Operacao -> . Atribuicao
    (18) Operacao -> . Ciclo
    (19) Operacao -> . Condicional
    (20) Operacao -> . Output
    (21) Atribuicao -> . AtribuicaoInt ;
    (22) Atribuicao -> . AtribuicaoInt
    (29) Ciclo -> . WHILE ( Comparacao ) { Operacoes }
    (30) Condicional -> . IF ( Comparacao ) { Operacoes }
    (31) Condicional -> . IF ( Comparacao ) { Operacoes } ELSE { Operacoes }
    (39) Output -> . PRINT ( Exp ) ;
    (40) Output -> . PRINT ( STRING ) ;
    (41) Output -> . PRINTLN ( Exp ) ;
    (42) Output -> . PRINTLN ( STRING ) ;
    (23) AtribuicaoInt -> . ID = Exp
    (24) AtribuicaoInt -> . READ ( ID )
    (25) AtribuicaoInt -> . ID [ Exp ] = Exp
    (26) AtribuicaoInt -> . READ ( ID [ Exp ] )
    (27) AtribuicaoInt -> . ID [ Exp ] [ Exp ] = Exp
    (28) AtribuicaoInt -> . READ ( ID [ Exp ] [ Exp ] )

    $end            reduce using rule 16 (Operacoes -> .)
    WHILE           shift and go to state 12
    IF              shift and go to state 13
    PRINT           shift and go to state 14
    PRINTLN         shift and go to state 15
    ID              shift and go to state 16
    READ            shift and go to state 17

    Operacoes                      shift and go to state 5
    Operacao                       shift and go to state 6
    Atribuicao                     shift and go to state 7
    Ciclo                          shift and go to state 8
    Condicional                    shift and go to state 9
    Output                         shift and go to state 10
    AtribuicaoInt                  shift and go to state 11

state 3

    (2) Declaracoes -> Declaracao . Declaracoes
    (2) Declaracoes -> . Declaracao Declaracoes
    (3) Declaracoes -> .
    (4) Declaracao -> . INT DeclaracaoInt ;
    (5) Declaracao -> . INT DeclaracaoInt

    WHILE           reduce using rule 3 (Declaracoes -> .)
    IF              reduce using rule 3 (Declaracoes -> .)
    PRINT           reduce using rule 3 (Declaracoes -> .)
    PRINTLN         reduce using rule 3 (Declaracoes -> .)
    ID              reduce using rule 3 (Declaracoes -> .)
    READ            reduce using rule 3 (Declaracoes -> .)
    $end            reduce using rule 3 (Declaracoes -> .)
    INT             shift and go to state 4

    Declaracao                     shift and go to state 3
    Declaracoes                    shift and go to state 18

state 4

    (4) Declaracao -> INT . DeclaracaoInt ;
    (5) Declaracao -> INT . DeclaracaoInt
    (6) DeclaracaoInt -> . ID = Exp
    (7) DeclaracaoInt -> . ID
    (8) DeclaracaoInt -> . ID = READ ( )
    (9) DeclaracaoInt -> . ID [ NUMBER ]
    (10) DeclaracaoInt -> . ID [ NUMBER ] = Lista
    (11) DeclaracaoInt -> . ID [ NUMBER ] [ NUMBER ]

    ID              shift and go to state 20

    DeclaracaoInt                  shift and go to state 19

state 5

    (1) Programa -> Declaracoes Operacoes .

    $end            reduce using rule 1 (Programa -> Declaracoes Operacoes .)


state 6

    (15) Operacoes -> Operacao . Operacoes
    (15) Operacoes -> . Operacao Operacoes
    (16) Operacoes -> .
    (17) Operacao -> . Atribuicao
    (18) Operacao -> . Ciclo
    (19) Operacao -> . Condicional
    (20) Operacao -> . Output
    (21) Atribuicao -> . AtribuicaoInt ;
    (22) Atribuicao -> . AtribuicaoInt
    (29) Ciclo -> . WHILE ( Comparacao ) { Operacoes }
    (30) Condicional -> . IF ( Comparacao ) { Operacoes }
    (31) Condicional -> . IF ( Comparacao ) { Operacoes } ELSE { Operacoes }
    (39) Output -> . PRINT ( Exp ) ;
    (40) Output -> . PRINT ( STRING ) ;
    (41) Output -> . PRINTLN ( Exp ) ;
    (42) Output -> . PRINTLN ( STRING ) ;
    (23) AtribuicaoInt -> . ID = Exp
    (24) AtribuicaoInt -> . READ ( ID )
    (25) AtribuicaoInt -> . ID [ Exp ] = Exp
    (26) AtribuicaoInt -> . READ ( ID [ Exp ] )
    (27) AtribuicaoInt -> . ID [ Exp ] [ Exp ] = Exp
    (28) AtribuicaoInt -> . READ ( ID [ Exp ] [ Exp ] )

    $end            reduce using rule 16 (Operacoes -> .)
    }               reduce using rule 16 (Operacoes -> .)
    WHILE           shift and go to state 12
    IF              shift and go to state 13
    PRINT           shift and go to state 14
    PRINTLN         shift and go to state 15
    ID              shift and go to state 16
    READ            shift and go to state 17

    Operacao                       shift and go to state 6
    Operacoes                      shift and go to state 21
    Atribuicao                     shift and go to state 7
    Ciclo                          shift and go to state 8
    Condicional                    shift and go to state 9
    Output                         shift and go to state 10
    AtribuicaoInt                  shift and go to state 11

state 7

    (17) Operacao -> Atribuicao .

    WHILE           reduce using rule 17 (Operacao -> Atribuicao .)
    IF              reduce using rule 17 (Operacao -> Atribuicao .)
    PRINT           reduce using rule 17 (Operacao -> Atribuicao .)
    PRINTLN         reduce using rule 17 (Operacao -> Atribuicao .)
    ID              reduce using rule 17 (Operacao -> Atribuicao .)
    READ            reduce using rule 17 (Operacao -> Atribuicao .)
    $end            reduce using rule 17 (Operacao -> Atribuicao .)
    }               reduce using rule 17 (Operacao -> Atribuicao .)


state 8

    (18) Operacao -> Ciclo .

    WHILE           reduce using rule 18 (Operacao -> Ciclo .)
    IF              reduce using rule 18 (Operacao -> Ciclo .)
    PRINT           reduce using rule 18 (Operacao -> Ciclo .)
    PRINTLN         reduce using rule 18 (Operacao -> Ciclo .)
    ID              reduce using rule 18 (Operacao -> Ciclo .)
    READ            reduce using rule 18 (Operacao -> Ciclo .)
    $end            reduce using rule 18 (Operacao -> Ciclo .)
    }               reduce using rule 18 (Operacao -> Ciclo .)


state 9

    (19) Operacao -> Condicional .

    WHILE           reduce using rule 19 (Operacao -> Condicional .)
    IF              reduce using rule 19 (Operacao -> Condicional .)
    PRINT           reduce using rule 19 (Operacao -> Condicional .)
    PRINTLN         reduce using rule 19 (Operacao -> Condicional .)
    ID              reduce using rule 19 (Operacao -> Condicional .)
    READ            reduce using rule 19 (Operacao -> Condicional .)
    $end            reduce using rule 19 (Operacao -> Condicional .)
    }               reduce using rule 19 (Operacao -> Condicional .)


state 10

    (20) Operacao -> Output .

    WHILE           reduce using rule 20 (Operacao -> Output .)
    IF              reduce using rule 20 (Operacao -> Output .)
    PRINT           reduce using rule 20 (Operacao -> Output .)
    PRINTLN         reduce using rule 20 (Operacao -> Output .)
    ID              reduce using rule 20 (Operacao -> Output .)
    READ            reduce using rule 20 (Operacao -> Output .)
    $end            reduce using rule 20 (Operacao -> Output .)
    }               reduce using rule 20 (Operacao -> Output .)


state 11

    (21) Atribuicao -> AtribuicaoInt . ;
    (22) Atribuicao -> AtribuicaoInt .

    ;               shift and go to state 22
    WHILE           reduce using rule 22 (Atribuicao -> AtribuicaoInt .)
    IF              reduce using rule 22 (Atribuicao -> AtribuicaoInt .)
    PRINT           reduce using rule 22 (Atribuicao -> AtribuicaoInt .)
    PRINTLN         reduce using rule 22 (Atribuicao -> AtribuicaoInt .)
    ID              reduce using rule 22 (Atribuicao -> AtribuicaoInt .)
    READ            reduce using rule 22 (Atribuicao -> AtribuicaoInt .)
    $end            reduce using rule 22 (Atribuicao -> AtribuicaoInt .)
    }               reduce using rule 22 (Atribuicao -> AtribuicaoInt .)


state 12

    (29) Ciclo -> WHILE . ( Comparacao ) { Operacoes }

    (               shift and go to state 23


state 13

    (30) Condicional -> IF . ( Comparacao ) { Operacoes }
    (31) Condicional -> IF . ( Comparacao ) { Operacoes } ELSE { Operacoes }

    (               shift and go to state 24


state 14

    (39) Output -> PRINT . ( Exp ) ;
    (40) Output -> PRINT . ( STRING ) ;

    (               shift and go to state 25


state 15

    (41) Output -> PRINTLN . ( Exp ) ;
    (42) Output -> PRINTLN . ( STRING ) ;

    (               shift and go to state 26


state 16

    (23) AtribuicaoInt -> ID . = Exp
    (25) AtribuicaoInt -> ID . [ Exp ] = Exp
    (27) AtribuicaoInt -> ID . [ Exp ] [ Exp ] = Exp

    =               shift and go to state 27
    [               shift and go to state 28


state 17

    (24) AtribuicaoInt -> READ . ( ID )
    (26) AtribuicaoInt -> READ . ( ID [ Exp ] )
    (28) AtribuicaoInt -> READ . ( ID [ Exp ] [ Exp ] )

    (               shift and go to state 29


state 18

    (2) Declaracoes -> Declaracao Declaracoes .

    WHILE           reduce using rule 2 (Declaracoes -> Declaracao Declaracoes .)
    IF              reduce using rule 2 (Declaracoes -> Declaracao Declaracoes .)
    PRINT           reduce using rule 2 (Declaracoes -> Declaracao Declaracoes .)
    PRINTLN         reduce using rule 2 (Declaracoes -> Declaracao Declaracoes .)
    ID              reduce using rule 2 (Declaracoes -> Declaracao Declaracoes .)
    READ            reduce using rule 2 (Declaracoes -> Declaracao Declaracoes .)
    $end            reduce using rule 2 (Declaracoes -> Declaracao Declaracoes .)


state 19

    (4) Declaracao -> INT DeclaracaoInt . ;
    (5) Declaracao -> INT DeclaracaoInt .

    ;               shift and go to state 30
    INT             reduce using rule 5 (Declaracao -> INT DeclaracaoInt .)
    WHILE           reduce using rule 5 (Declaracao -> INT DeclaracaoInt .)
    IF              reduce using rule 5 (Declaracao -> INT DeclaracaoInt .)
    PRINT           reduce using rule 5 (Declaracao -> INT DeclaracaoInt .)
    PRINTLN         reduce using rule 5 (Declaracao -> INT DeclaracaoInt .)
    ID              reduce using rule 5 (Declaracao -> INT DeclaracaoInt .)
    READ            reduce using rule 5 (Declaracao -> INT DeclaracaoInt .)
    $end            reduce using rule 5 (Declaracao -> INT DeclaracaoInt .)


state 20

    (6) DeclaracaoInt -> ID . = Exp
    (7) DeclaracaoInt -> ID .
    (8) DeclaracaoInt -> ID . = READ ( )
    (9) DeclaracaoInt -> ID . [ NUMBER ]
    (10) DeclaracaoInt -> ID . [ NUMBER ] = Lista
    (11) DeclaracaoInt -> ID . [ NUMBER ] [ NUMBER ]

    =               shift and go to state 31
    ;               reduce using rule 7 (DeclaracaoInt -> ID .)
    INT             reduce using rule 7 (DeclaracaoInt -> ID .)
    WHILE           reduce using rule 7 (DeclaracaoInt -> ID .)
    IF              reduce using rule 7 (DeclaracaoInt -> ID .)
    PRINT           reduce using rule 7 (DeclaracaoInt -> ID .)
    PRINTLN         reduce using rule 7 (DeclaracaoInt -> ID .)
    ID              reduce using rule 7 (DeclaracaoInt -> ID .)
    READ            reduce using rule 7 (DeclaracaoInt -> ID .)
    $end            reduce using rule 7 (DeclaracaoInt -> ID .)
    [               shift and go to state 32


state 21

    (15) Operacoes -> Operacao Operacoes .

    $end            reduce using rule 15 (Operacoes -> Operacao Operacoes .)
    }               reduce using rule 15 (Operacoes -> Operacao Operacoes .)


state 22

    (21) Atribuicao -> AtribuicaoInt ; .

    WHILE           reduce using rule 21 (Atribuicao -> AtribuicaoInt ; .)
    IF              reduce using rule 21 (Atribuicao -> AtribuicaoInt ; .)
    PRINT           reduce using rule 21 (Atribuicao -> AtribuicaoInt ; .)
    PRINTLN         reduce using rule 21 (Atribuicao -> AtribuicaoInt ; .)
    ID              reduce using rule 21 (Atribuicao -> AtribuicaoInt ; .)
    READ            reduce using rule 21 (Atribuicao -> AtribuicaoInt ; .)
    $end            reduce using rule 21 (Atribuicao -> AtribuicaoInt ; .)
    }               reduce using rule 21 (Atribuicao -> AtribuicaoInt ; .)


state 23

    (29) Ciclo -> WHILE ( . Comparacao ) { Operacoes }
    (32) Comparacao -> . Exp Comparador Exp
    (43) Exp -> . Exp + Termo
    (44) Exp -> . Exp - Termo
    (45) Exp -> . Termo
    (46) Termo -> . Termo * Fator
    (47) Termo -> . Termo / Fator
    (48) Termo -> . Termo % Fator
    (49) Termo -> . Fator
    (50) Fator -> . ID
    (51) Fator -> . ID [ Exp ]
    (52) Fator -> . ID [ Exp ] [ Exp ]
    (53) Fator -> . NUMBER
    (54) Fator -> . ( Exp )

    ID              shift and go to state 38
    NUMBER          shift and go to state 39
    (               shift and go to state 33

    Comparacao                     shift and go to state 34
    Exp                            shift and go to state 35
    Termo                          shift and go to state 36
    Fator                          shift and go to state 37

state 24
